[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/entities/enemies/firewall/patterns/z_pattern/pattern.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SphereShape" id=2]

[node name="Pattern" type="Spatial"]
script = ExtResource( 1 )

[node name="PatternGrid" type="Spatial" parent="."]

[node name="Vertex0" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 5, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex0"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex0"]
shape = SubResource( 2 )

[node name="Vertex1" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex1"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex1"]
shape = SubResource( 2 )

[node name="Vertex2" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex2"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex2"]
shape = SubResource( 2 )

[node name="Vertex3" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex3"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex3"]
shape = SubResource( 2 )

[node name="Vertex4" type="Area" parent="PatternGrid"]
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex4"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex4"]
shape = SubResource( 2 )

[node name="Vertex5" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex5"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex5"]
shape = SubResource( 2 )

[node name="Vertex6" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -5, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex6"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex6"]
shape = SubResource( 2 )

[node name="Vertex7" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex7"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex7"]
shape = SubResource( 2 )

[node name="Vertex8" type="Area" parent="PatternGrid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, -5, 0 )
collision_layer = 16384
collision_mask = 16384

[node name="MeshInstance" type="MeshInstance" parent="PatternGrid/Vertex8"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PatternGrid/Vertex8"]
shape = SubResource( 2 )

[connection signal="area_shape_entered" from="PatternGrid/Vertex0" to="." method="_on_Vertex0_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex0" to="." method="_on_Vertex0_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex1" to="." method="_on_Vertex1_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex1" to="." method="_on_Vertex1_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex2" to="." method="_on_Vertex2_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex2" to="." method="_on_Vertex2_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex3" to="." method="_on_Vertex3_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex3" to="." method="_on_Vertex3_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex4" to="." method="_on_Vertex4_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex4" to="." method="_on_Vertex4_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex5" to="." method="_on_Vertex5_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex5" to="." method="_on_Vertex5_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex6" to="." method="_on_Vertex6_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex6" to="." method="_on_Vertex6_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex7" to="." method="_on_Vertex7_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex7" to="." method="_on_Vertex7_area_shape_exited"]
[connection signal="area_shape_entered" from="PatternGrid/Vertex8" to="." method="_on_Vertex8_area_shape_entered"]
[connection signal="area_shape_exited" from="PatternGrid/Vertex8" to="." method="_on_Vertex8_area_shape_exited"]
